s/rustc_serialize/serde/g

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "constable"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Joshua Miller <jsmiller@uchicago.edu>"]
 
 [dependencies]
-bincode = "*"
-rustc-serialize = "^0.3"
-quick-error = "*"
+bincode = "0.8.0"
+quick-error = "1.2.0"
+serde = "1.0.11"
+serde_derive = "1.0.11"
